--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Parallel-Quicksort"]
-	path = Parallel-Quicksort
-	url = https://github.com/ucrparlay-class/Parallel-Quicksort
+[submodule "parlaylib"]
+	path = parlaylib
+	url = https://github.com/cmuparlay/parlaylib
